feat: new style and markup

--- a/main.css
+++ b/main.css
@@ -44,3 +44,20 @@ body {
     display: flex;
     gap: 8px;
 }
+
+header {
+    width: 100%;
+    display: none;
+}
+
+header > nav {
+    width: 100%;
+    display: flex;
+}
+
+header > nav > ul {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
